--- a/GAVRO/rbac-ehns-roleassignment.json
+++ b/GAVRO/rbac-ehns-roleassignment.json
@@ -4,6 +4,7 @@
   "parameters": {
     "roleAssignmentName": {
       "type": "string",
+      "defaultValue": "[newid()]",
       "metadata": {
         "description": "Specifies the name of the role assignment to create. It can be any valid GUID."
       }
