--- a/GAVRO/rbac-ehns-roleassignment.parameters.json
+++ b/GAVRO/rbac-ehns-roleassignment.parameters.json
@@ -4,7 +4,7 @@
   "parameters": {
     "scope": { "value": "Microsoft.EventHub/namespaces/providers/roleAssignments" },
     "roleAssignmentName": {
-      "value": "[concat('gavroehns/Microsoft.Authorization/', guid(uniqueString('gavroehns')))]"
+      "value": "[concat('gavroehnamespace/Microsoft.Authorization/', guid(uniqueString('gavroehnamespace')))]"
     },
     "roleDefinitionID": {
       "value": "2b629674-e913-4c01-ae53-ef4638d8f975",
