--- a/.gitignore
+++ b/.gitignore
@@ -37,3 +37,5 @@ test/template-validation-tests/mochawesome-report/*
 test/AzTemplateToolKit.zip
 test/arm-template-toolkit.zip
 /.vs/azure-quickstart-templates/v16/.suo
+/.vs/VSWorkspaceState.json
+/.vs/slnx.sqlite
